--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
 
 /* Your CSS Code here. */
-#btn {
-     background-color: black;
-     color: white;
-     border-radius: 5px;
+#btn{
+     /* background-color: black; */
+     /* color: white; */
+     /* border-radius: 5px; */
 }
 #btn:hover {
 background-color: yellow;
