--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
      /* border-radius: 5px; */
 }
 #btn:hover {
-background-color: yellow;
+/* background-color: yellow; */
 color: rgb(0, 0, 0);
 border-radius: 30px;
 }
