--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,12 @@
 
 /* Your CSS Code here. */
 #btn{
-     /* background-color: black; */
-     /* color: white; */
-     /* border-radius: 5px; */
+     background-color: black;
+     color: white;
+     border-radius: 5px;
 }
 #btn:hover {
-/* background-color: yellow; */
+background-color: yellow;
 color: rgb(0, 0, 0);
 border-radius: 30px;
 }
